@@ -143,6 +143,9 @@ Show filename extensions only.
 \fB\-\-file\-filter REGEX\fR
 Filter out any files matching a specified regular expression.
 .TP
+\f8\-\-file\-show\-filter REGEX\fR
+Show only files matching this regular expression.
+.TP
 \fB\-\-user\-filter REGEX\fR
 Filter out any usernames matching a specified regular expression.
 .TP
