@@ -20,10 +20,9 @@ file-filter=\.cpp
 stop-at-time=5.0
 
 [gource]
-title=Filename filter (.cpp)
+title=Filename show filter (.cpp)
 file-show-filter=\.cpp
 stop-at-time=5.0
-
 
 [gource]
 title=Directory delete (SVN)
