@@ -1,6 +1,7 @@
 0.45:
  * Fixed crash when SVN log lacks author information (obarthel).
  * Additional git log command validation (cym13).
+ * Added --file-show-filter REGEX option (swoogles).
 
 0.44:
  * Fixed crash when taking a screenshot with an odd resolution.
